# mini-redis

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  client  mini_redis  server  test_db  test_parser
src/: main.cpp
src/client/: client.cpp  client.h  main.cpp
src/common/: constants.h
src/database/: database.cpp  database.h
src/executor/: executor.cpp  executor.h
src/parser/: parser.cpp  parser.h
src/server/: server.cpp  server.h
tests/: test_database.cpp  test_parser.cpp
